// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography should render 1`] = `
.c0 {
  color: #1b2733;
  font-weight: 500;
  font-size: 15px;
  font-display: fallback;
}

@media screen and (min-width:400px) {
  .c0 {
    font-size: 15px;
  }
}

@media screen and (min-width:576px) {
  .c0 {
    font-size: 14px;
  }
}

@media screen and (min-width:786px) {
  .c0 {
    font-size: 14px;
  }
}

<label
  class="c0"
  color="text"
  font-size="15px,15px,14px,14px"
  font-weight="500"
  tag="label"
  type="body"
>
  Some sort of text
</label>
`;

exports[`Typography should render color correctly 1`] = `
.c0 {
  color: #1b2733;
  font-weight: 500;
  font-size: 15px;
  font-display: fallback;
}

@media screen and (min-width:400px) {
  .c0 {
    font-size: 15px;
  }
}

@media screen and (min-width:576px) {
  .c0 {
    font-size: 14px;
  }
}

@media screen and (min-width:786px) {
  .c0 {
    font-size: 14px;
  }
}

<label
  class="c0"
  color="text"
  font-size="15px,15px,14px,14px"
  font-weight="500"
  tag="label"
  type="body"
>
  Some sort of text
</label>
`;

exports[`Typography should render font weight correctly 1`] = `
.c0 {
  color: #1b2733;
  font-weight: 500;
  font-size: 15px;
  font-display: fallback;
}

@media screen and (min-width:400px) {
  .c0 {
    font-size: 15px;
  }
}

@media screen and (min-width:576px) {
  .c0 {
    font-size: 14px;
  }
}

@media screen and (min-width:786px) {
  .c0 {
    font-size: 14px;
  }
}

<label
  class="c0"
  color="text"
  font-size="15px,15px,14px,14px"
  font-weight="500"
  tag="label"
  type="body"
>
  Some sort of text
</label>
`;

exports[`Typography should render line height correctly 1`] = `
.c0 {
  color: #1b2733;
  font-weight: 500;
  font-size: 15px;
  line-height: 24px;
  font-display: fallback;
}

@media screen and (min-width:400px) {
  .c0 {
    font-size: 15px;
  }
}

@media screen and (min-width:576px) {
  .c0 {
    font-size: 14px;
  }
}

@media screen and (min-width:786px) {
  .c0 {
    font-size: 14px;
  }
}

<label
  class="c0"
  color="text"
  font-size="15px,15px,14px,14px"
  font-weight="500"
  lineheight="24px"
  tag="label"
  type="body"
>
  Some sort of text
</label>
`;

exports[`Typography should render type correctly 1`] = `
.c0 {
  color: #1b2733;
  font-weight: 500;
  font-size: 15px;
  font-display: fallback;
}

@media screen and (min-width:400px) {
  .c0 {
    font-size: 15px;
  }
}

@media screen and (min-width:576px) {
  .c0 {
    font-size: 14px;
  }
}

@media screen and (min-width:786px) {
  .c0 {
    font-size: 14px;
  }
}

<label
  class="c0"
  color="text"
  font-size="15px,15px,14px,14px"
  font-weight="500"
  tag="label"
  type="body"
>
  Some sort of text
</label>
`;
